--- a/Frontend/src/app/partials/navbar/navbar.component.html
+++ b/Frontend/src/app/partials/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav [class]="(isExplode) ? 'navbar navbar-implode' : 'navbar'">
   <div class="navbar-logo">
     <span>Star Portal</span>
   </div>
