--- a/Frontend/src/app/partials/navbar/navbar.component.scss
+++ b/Frontend/src/app/partials/navbar/navbar.component.scss
@@ -1,14 +1,24 @@
 @import "../../../scss/custom";
 
+.navbar-implode{
+    .navbar-logo span{
+        display: none;
+    }
+    .navbar-menu li span:first-child{
+        display: none;
+    }
+}
+
 .navbar{
     .navbar-logo{
         cursor: pointer;
         border-bottom: 1px solid $ft-color-2;
         line-height: 0;
-        padding: 10px 20px;
+        height: 50px;
+        padding-left:20px;
         span{
             font-size: 30px;
-            line-height: 30px;
+            line-height: 50px;
         }
     }
     .navbar-menu{
