--- a/Frontend/src/scss/_custom.scss
+++ b/Frontend/src/scss/_custom.scss
@@ -1,6 +1,6 @@
 $bg-color-1: rgb(100, 0, 0);
 $bg-color-2: rgb(50, 0, 0);
 $bg-color-3: rgb(150, 50, 50);
-$bg-color-4: rgb(255, 225, 225);
+$bg-color-4: rgba(0, 0, 0, 0.1);
 $ft-color-1: rgb(255,255,255);
 $ft-color-2: rgb(255, 225, 225);
