--- a/Frontend/src/scss/styles.scss
+++ b/Frontend/src/scss/styles.scss
@@ -8,3 +8,26 @@ html, body{
     height:101%;
     font-family: 'microsoft yahei';
 }
+h2{
+    font-family: 'microsoft yahei';
+}
+.uk-button{
+    span:first-child{
+        margin-right: 10px;
+    }
+}
+table{
+    thead>*{
+        background-color: rgba(0,0,0,0.45);
+    }
+    tbody>*{
+        color: rgba(0,0,0,0.85);;
+        background-color: rgba(0,0,0,0.1);
+    }
+}
+.uk-table th{
+    color: white;   
+}
+td{
+    border-top: 1px solid gray;
+}
