--- a/Frontend/src/app/partials/navbar/navbar.component.html
+++ b/Frontend/src/app/partials/navbar/navbar.component.html
@@ -1,8 +1,8 @@
-<nav [class]="(isExplode) ? 'navbar navbar-implode' : 'navbar'">
-  <div class="navbar-logo">
+<nav [class]="(isExplode) ? 'pnl-menu pnl-menu-implode' : 'pnl-menu'">
+  <div class="pnl-menu-logo">
     <span>Star Portal</span>
   </div>
-  <ul class="navbar-menu">
+  <ul class="pnl-menu-content">
     <li routerLink="/course">
       <span>課程</span>
       <span class="fas fa-book"></span>
