--- a/Frontend/src/app/partials/header/header.component.html
+++ b/Frontend/src/app/partials/header/header.component.html
@@ -3,20 +3,16 @@
     <span class="fas fa-bars" (click)="explodeMenu()"></span>
   </div>
   <div class="pnl-user">
-    <div class="uk-inline">
-      <div>
+    <div class="dropdown">
+      <div data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <span class="fas fa-user"></span>
         <span>User</span>
       </div>
-      <div uk-dropdown="mode: click;">
-        <ul class="uk-nav uk-dropdown-nav">
-          <li>
-            <a href="#">
-              <span class="fas fa-sign-out-alt"></span>
-              <span>登出</span>
-            </a>
-          </li>
-        </ul>
+      <div class="dropdown-menu dropdown-menu-right rounded-0">
+        <a class="dropdown-item" href="#">
+          <span class="fas fa-sign-out-alt"></span>
+          <span>登出</span>
+        </a>
       </div>
     </div>
   </div>
