--- a/Frontend/src/scss/styles.scss
+++ b/Frontend/src/scss/styles.scss
@@ -16,6 +16,9 @@ h2{
         margin-right: 10px;
     }
 }
+.form-control{
+    border-radius: 0;
+}
 .txt-page-title{
     border-bottom: 5px solid $bg-color-1;
     padding-bottom: 5px;
